[gd_scene load_steps=22 format=3 uid="uid://ciuayf5okyali"]

[ext_resource type="Texture2D" uid="uid://dj455kmgpuuy3" path="res://Assets/Images/Nick.png" id="1_0uegn"]
[ext_resource type="PackedScene" uid="uid://ctymmmhqnr2wr" path="res://Scenes/health_bar.tscn" id="1_3p4mx"]
[ext_resource type="PackedScene" uid="uid://cjukbma0njshh" path="res://Scenes/bulletTime_bar.tscn" id="2_mmi5f"]
[ext_resource type="Texture2D" uid="uid://leo1egci8ueu" path="res://Assets/Images/circle progress bar under.png" id="4_hdwry"]
[ext_resource type="Texture2D" uid="uid://d1fve6q2np14i" path="res://Assets/Images/circle progress bar.png" id="5_j40jq"]
[ext_resource type="Script" path="res://Scripts/ExperienceBar.gd" id="6_kdl4l"]
[ext_resource type="Script" path="res://Scripts/LevelUpButton.gd" id="7_46r0i"]
[ext_resource type="Script" path="res://Resources/Upgrades/btChargeUpgrade.gd" id="8_0a0ik"]
[ext_resource type="Script" path="res://Resources/Upgrades/healthUpgrade.gd" id="8_71402"]
[ext_resource type="Script" path="res://Resources/Upgrades/goldUpgrade.gd" id="9_blwqy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv4x8"]
bg_color = Color(0, 0, 0.454902, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 30
corner_radius_bottom_right = 400
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1mel"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 5
corner_radius_bottom_right = 100
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5b5vh"]
bg_color = Color(0.215686, 0.227451, 0.25098, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rr1a"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8duf"]
bg_color = Color(0.239216, 0.211765, 0.290196, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syf6r"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_suk1k"]
bg_color = Color(0, 0, 0.490196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.8, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16tah"]
bg_color = Color(0, 0.109804, 0.517647, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="Resource" id="Resource_15vml"]
script = ExtResource("8_71402")

[sub_resource type="Resource" id="Resource_tj07r"]
script = ExtResource("8_0a0ik")

[sub_resource type="Resource" id="Resource_xowo7"]
script = ExtResource("9_blwqy")

[node name="Player UI Bar" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="UI Elements" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel7" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 344.0
offset_top = 56.0
offset_right = 672.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fv4x8")

[node name="Panel6" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 328.0
offset_top = 80.0
offset_right = 744.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b1mel")

[node name="Panel" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 296.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5b5vh")

[node name="Panel2" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 264.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1rr1a")

[node name="TextureRect" type="TextureRect" parent="UI Elements"]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 264.0
offset_bottom = 232.0
texture = ExtResource("1_0uegn")
expand_mode = 2

[node name="Panel8" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 232.0
offset_top = 200.0
offset_right = 384.0
offset_bottom = 352.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s8duf")

[node name="Panel9" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 264.0
offset_top = 232.0
offset_right = 352.0
offset_bottom = 320.0
theme_override_styles/panel = SubResource("StyleBoxFlat_syf6r")

[node name="Panel5" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = -24.0
offset_top = 72.0
offset_right = 24.0
offset_bottom = 224.0
theme_override_styles/panel = SubResource("StyleBoxFlat_suk1k")

[node name="Panel11" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 216.0
offset_top = -16.0
offset_right = 240.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_16tah")

[node name="Panel12" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 248.0
offset_top = -16.0
offset_right = 272.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_16tah")

[node name="Panel3" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 120.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 56.0
rotation = 0.349066
theme_override_styles/panel = SubResource("StyleBoxFlat_1rr1a")

[node name="Panel4" type="Panel" parent="UI Elements"]
layout_mode = 0
offset_left = 136.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 56.0
rotation = 0.349066
theme_override_styles/panel = SubResource("StyleBoxFlat_1rr1a")

[node name="LevelCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 232.0
offset_right = 336.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 64.0
offset_right = 421.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 25
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BT" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 128.0
offset_right = 421.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 25
text = "BT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" parent="." instance=ExtResource("1_3p4mx")]
layout_mode = 0
offset_left = 376.0
offset_top = 120.0
offset_right = 728.0
offset_bottom = 144.0

[node name="BulletTimeBar" parent="." instance=ExtResource("2_mmi5f")]
layout_mode = 0
offset_left = 376.0
offset_top = 184.0
offset_right = 672.0
offset_bottom = 208.0

[node name="ExperienceBar" type="TextureProgressBar" parent="."]
z_index = -1
layout_mode = 0
offset_left = 168.0
offset_top = 136.0
offset_right = 1281.0
offset_bottom = 1249.0
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 4
texture_under = ExtResource("4_hdwry")
texture_progress = ExtResource("5_j40jq")
tint_progress = Color(0, 1, 0.866667, 1)
radial_initial_angle = 50.0
radial_fill_degrees = 215.0
script = ExtResource("6_kdl4l")

[node name="LevelOverlay" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_46r0i")
hpUpgrade = SubResource("Resource_15vml")
bulletTimeUpgrade = SubResource("Resource_tj07r")
goldGainUp = SubResource("Resource_xowo7")

[node name="LevelUpFade" type="ColorRect" parent="LevelOverlay"]
z_index = 1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.878431)

[node name="PowerUpsContainer" type="HBoxContainer" parent="LevelOverlay/LevelUpFade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -308.0
offset_right = 608.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="LevelOverlay/LevelUpFade/PowerUpsContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "Option 1"

[node name="Button2" type="Button" parent="LevelOverlay/LevelUpFade/PowerUpsContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "Option 2"

[node name="Button3" type="Button" parent="LevelOverlay/LevelUpFade/PowerUpsContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "Option 3"

[connection signal="pressed" from="LevelOverlay/LevelUpFade/PowerUpsContainer/Button" to="LevelOverlay" method="_on_button_pressed"]
[connection signal="pressed" from="LevelOverlay/LevelUpFade/PowerUpsContainer/Button2" to="LevelOverlay" method="_on_button_2_pressed"]
[connection signal="pressed" from="LevelOverlay/LevelUpFade/PowerUpsContainer/Button3" to="LevelOverlay" method="_on_button_3_pressed"]
